corrected shiftat page footer color and white background for portfolio page

--- a/src/components/headerSection/header.module.css
+++ b/src/components/headerSection/header.module.css
@@ -5,6 +5,12 @@
   height: 51.15px;
 }
 
+.navComponentWhite {
+  background-color: #FFFFFF;
+  width: 100%;
+  height: 51.15px;
+}
+
 .navContainer {
   margin: 0 85.7266px 0 85.7188px;
   height: 50.65px;
